--- a/public/css/style.css
+++ b/public/css/style.css
@@ -261,3 +261,8 @@ input:-webkit-autofill:active  {
 .status-finished{
     background-color: rgba(255, 0, 31, 0.54) !important;
 }
+.visit-img{
+    width: 100%;
+    max-height: 300px;
+    border-radius: 0.75rem;
+}
